# qres-telescope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: iso_simple.md
src/qrt/: __init__.py  cli.py  core.py  ghost_energy.py  isoforms.py  viz_ascii.py
